[package]
name = "e_babylon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/moyy/e_babylon"
keywords = ["game", "engine", "gamedev", "graphics", "babylon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/*",
]

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
map_flatten = "warn"

[lints]
workspace = true

[dependencies]

[dev-dependencies]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
doc-scrape-examples = true